@@ -1,3 +1,8 @@
+2014-02-06  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/59992
+	* gcc.dg/pr59992.c: New test.
+
 2014-02-06  Marc Glisse  <marc.glisse@inria.fr>
 
 	* g++.dg/cpp0x/constexpr-attribute2.C: Restrict to target
